--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,30 @@
+[dependencies]
+anyhow = "1.0"
+chrono = {version = "0.4", features = ["serde"]}
+# CLI-specific dependencies
+clap = {version = "4.5", features = ["derive"]}
+futures = "0.3"
+graphbit-core = {path = "core", features = ["python"]}
+num_cpus = "1.16"
+reqwest = {version = "0.11", features = ["json"]}
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
+tempfile = "3.10.0"
+tokio = {version = "1.38", features = ["full"]}
+
+[features]
+cli = []
+default = []
+
 [package]
-name = "graphbit"
-version = "0.1.0"
-edition = "2021"
 authors = ["GraphBit Team"]
 description = "Command-line interface for GraphBit agentic workflow automation"
+edition = "2021"
 license = "MIT"
-repository = "https://github.com/InfinitiBit/graphbit"
+name = "graphbit"
 publish = false
-
-[dependencies]
-graphbit-core = { path = "core", features = ["python"] }
-
-# CLI-specific dependencies
-clap = { version = "4.5", features = ["derive"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-tokio = { version = "1.38", features = ["full"] }
-reqwest = { version = "0.11", features = ["json"] }
-chrono = { version = "0.4", features = ["serde"] }
-futures = "0.3"
-num_cpus = "1.16"
+repository = "https://github.com/InfinitiBit/graphbit"
+version = "0.1.0"
 
 [target.'cfg(unix)'.dependencies]
 jemallocator = "0.5"
-
-[features]
-default = []
-cli = []
