--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,7 @@ crewai = ">=0.41.0"
 langchain = ">=0.1.0"
 langchain-openai = ">=0.1.0"
 langgraph = ">=0.1.0"
+litellm = "^1.71.0"
 llama-index = ">=0.9.0"
 maturin = "^1.8.6"
 openai = ">=1.30.0"
