fix: ensure pre-commit, cargo-deny, and license checks work cross-platform
- Fix pre-commit hooks to work on both Windows and Linux/WSL (no more bash-only entries).
- Add and configure cargo-deny for Rust license compliance and security checks.
- Create and update deny.toml to allow all required open-source and Unicode licenses.
- Add license = "MIT OR Apache-2.0" to all internal crate Cargo.toml files (e.g., graphbit, graphbit-core).
- Remove obsolete/invalid config lines (e.g., enabled = true in [advisories]) from deny.toml.
- Tidy up .pre-commit-config.yaml for clarity and system compatibility.
- Run pretty-format-toml and other code quality hooks to ensure style and lint checks are enforced.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -192,12 +192,15 @@ repos:
     pass_filenames: false
 
       # Dependency vulnerability check
+      # Cross-platform compatible
   - id: cargo-deny
     name: Cargo deny check
-    entry: bash -c 'if command -v cargo-deny &> /dev/null; then cargo deny check; else echo "cargo-deny not installed, skipping"; fi'
+    entry: cargo deny check
     language: system
-    files: ^(Cargo\.toml|Cargo\.lock|.*/Cargo\.toml)$
     pass_filenames: false
+    require_serial: true
+
+
 
 
 
