refactor: integrate LLM-based post-processing and address Bandit/docstring issues [skip pre-commit]
- plan_executor.py:
  - Allow multiple matches for extract_text
  - Add module docstring and update run_browser_plan() docstring (D100, D205, D401)
- llm_graphbit_browser_agent.py:
  - Add post-processing with GPT-4 to select most relevant extracted text
  - Add module docstring and function docstring for main() (D100, D103)
- graphbit_agent_planner.py:
  - Improve planner prompt instructions for unique selector usage
  - Replace bare 'except Exception: continue' with proper logging (Bandit B112)
- .pre-commit-config.yaml:
  - Optionally skip hadolint-docker and cargo-deny on Windows

--- a/examples/llm-guided-browser-automation-agent-graphbit-playwright/pyproject.toml
+++ b/examples/llm-guided-browser-automation-agent-graphbit-playwright/pyproject.toml
@@ -3,7 +3,7 @@ build-backend = "poetry.core.masonry.api"
 requires = ["poetry-core>=1.0.0"]
 
 [tool.poetry]
-authors = ["Your Name <your.email@example.com>"]
+authors = ["GraphBit"]
 description = "LLM-driven browser automation agent using Graphbit (PyO3 bindings), OpenAI GPT, and Playwright"
 name = "graphbit-llm-browser-agent"
 packages = [{include = "*"}]
