--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -1,13 +1,16 @@
 [dependencies]
 chrono = {version = "0.4", features = ["serde"]}
+
 futures = "0.3"
 graphbit-core = {path = "../core", features = ["python"]}
 num_cpus = "1.16"
 pyo3 = {version = "0.24.1", features = ["extension-module"]}
 pyo3-async-runtimes = {version = "0.24", features = ["tokio-runtime"]}
+
 reqwest = {version = "0.11", features = ["json"]}
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+uuid = {version = "1.0", features = ["v4"]}
 # System information and monitoring
 sys-info = "0.9"
 tokio = {version = "1.38", features = ["full"]}
