--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,21 +92,94 @@ version = "0.1.0"
 [tool.poetry.dependencies]
 aiofiles = ">=23.0.0"
 anthropic = ">=0.24.0"
+astrapy = {version = ">=1.0.0", optional = true}
+azure-cosmos = {version = ">=4.5.0", optional = true}
+azure-storage-blob = {version = ">=12.19.0", optional = true}
+# Cloud Providers
+boto3 = {version = ">=1.34.0", optional = true}
+chromadb = {version = ">=0.4.0", optional = true}
 click = "^8.2.1"
 crewai = ">=0.41.0"
+elasticsearch = {version = ">=8.11.0", optional = true}
+faiss-cpu = {version = ">=1.7.0", optional = true}
+# Search Engines
+google-api-python-client = {version = ">=2.108.0", optional = true}
+google-cloud-firestore = {version = ">=2.13.0", optional = true}
+google-cloud-storage = {version = ">=2.10.0", optional = true}
+ibm-db = {version = ">=3.2.0", optional = true}
 # Core AI/ML dependencies
 langchain = ">=0.1.0"
 langchain-openai = ">=0.1.0"
 langgraph = ">=0.1.0"
 llama-index = ">=0.9.0"
+mariadb = {version = ">=1.1.0", optional = true}
 maturin = "^1.8.6"
 openai = ">=1.30.0"
+pgvector = {version = ">=0.2.0", optional = true}
+# Optional dependencies for extensions
+# Vector Databases
+pinecone-client = {version = ">=3.0.0", optional = true}
+psycopg2-binary = {version = ">=2.9.0", optional = true}
 pydantic-ai = ">=0.0.5"
+pymilvus = {version = ">=2.3.0", optional = true}
+# Traditional Databases
+pymongo = {version = ">=4.6.0", optional = true}
 python = ">=3.10,<3.13"
 # Utility dependencies
 python-dotenv = ">=1.0.0"
+qdrant-client = {version = ">=1.7.0", optional = true}
 rich = ">=13.0.0"
 typer = ">=0.9.0"
+weaviate-client = {version = ">=4.4.0", optional = true}
+
+[tool.poetry.extras]
+# Install all extensions
+all = [
+  "pinecone-client",
+  "qdrant-client",
+  "weaviate-client",
+  "chromadb",
+  "pymilvus",
+  "faiss-cpu",
+  "astrapy",
+  "pymongo",
+  "psycopg2-binary",
+  "pgvector",
+  "mariadb",
+  "ibm-db",
+  "elasticsearch",
+  "boto3",
+  "azure-storage-blob",
+  "azure-cosmos",
+  "google-cloud-storage",
+  "google-cloud-firestore",
+  "google-api-python-client"
+]
+astradb = ["astrapy"]
+# Cloud Provider Extensions
+aws_boto3 = ["boto3"]
+azure = ["azure-storage-blob", "azure-cosmos"]
+chromadb = ["chromadb"]
+cloud_providers = ["boto3", "azure-storage-blob", "azure-cosmos", "google-cloud-storage", "google-cloud-firestore"]
+db2 = ["ibm-db"]
+elasticsearch = ["elasticsearch"]
+faiss = ["faiss-cpu"]
+google_cloud_platform = ["google-cloud-storage", "google-cloud-firestore"]
+# Search Engine Extensions
+google_search_api = ["google-api-python-client"]
+mariadb = ["mariadb"]
+milvus = ["pymilvus"]
+pgvector = ["psycopg2-binary", "pgvector"]
+# Vector Database Extensions
+pinecone = ["pinecone-client"]
+# Traditional Database Extensions
+pymongo = ["pymongo"]
+qdrant = ["qdrant-client"]
+search_engines = ["google-api-python-client"]
+traditional_databases = ["pymongo", "psycopg2-binary", "pgvector", "mariadb", "ibm-db", "elasticsearch"]
+# Convenience groups
+vector_databases = ["pinecone-client", "qdrant-client", "weaviate-client", "chromadb", "pymilvus", "faiss-cpu", "astrapy"]
+weaviate = ["weaviate-client"]
 
 [tool.poetry.group.benchmarks.dependencies]
 matplotlib = ">=3.7.0"
