--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 tempfile = "3.10.0"
 tokio = {version = "1.38", features = ["full"]}
+async-trait = "0.1.88"
 
 [features]
 default = []
