feature: add automated version management system
- Add comprehensive Python script for cross-repository version updates
- Support Cargo.toml, pyproject.toml, package.json, and Python __init__.py files
- Implement context-aware pattern matching to avoid false positives
- Add safety features: backup creation, rollback capability, git validation
- Include cross-platform shell and batch wrappers for enhanced UX
- Add comprehensive documentation and usage examples
- Support semantic versioning with pre-release and build metadata
- Enable dry-run mode for safe preview of changes

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -33,7 +33,7 @@ description = "Core engine for GraphBit agentic workflow automation"
 edition = "2021"
 name = "graphbit-core"
 repository = "https://github.com/InfinitiBit/graphbit"
-version = "0.1.0"
+version = "0.3.0-alpha"
 
 [target.'cfg(unix)'.dependencies]
 jemallocator = "0.5"
