--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ edition = "2021"
 name = "graphbit"
 publish = false
 repository = "https://github.com/InfinitiBit/graphbit"
-version = "0.1.0"
+version = "0.3.0-alpha"
 
 [target.'cfg(unix)'.dependencies]
 jemallocator = "0.5"
