--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphbit",
-  "version": "0.1.0",
+  "version": "0.3.0-alpha",
   "description": "Production-grade TypeScript/JavaScript bindings for GraphBit agentic workflow automation",
   "main": "index.js",
   "types": "index.d.ts",
