--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,7 +87,7 @@ name = "graphbit"
 package-mode = false
 readme = "README.md"
 repository = "https://github.com/InfinitiBit/graphbit"
-version = "0.1.0"
+version = "0.3.0-alpha"
 
 [tool.poetry.dependencies]
 aiofiles = ">=23.0.0"
