--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,39 +84,85 @@ description = "GraphBit - Advanced workflow automation and AI agent orchestratio
 homepage = "https://github.com/InfinitiBit/graphbit"
 license = "proprietary"
 name = "graphbit"
-package-mode = false
+package-mode = true
 readme = "README.md"
 repository = "https://github.com/InfinitiBit/graphbit"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
+# Core dependencies - minimal for framework functionality
 aiofiles = ">=23.0.0"
-anthropic = ">=0.24.0"
-click = "^8.2.1"
-crewai = ">=0.41.0"
-# Core AI/ML dependencies
-langchain = ">=0.1.0"
-langchain-openai = ">=0.1.0"
-langgraph = ">=0.1.0"
-llama-index = ">=0.9.0"
-maturin = "^1.8.6"
-openai = ">=1.30.0"
-pydantic-ai = ">=0.0.5"
+# Optional AI/ML dependencies
+anthropic = {version = ">=0.24.0", optional = true}
+# Optional benchmarking dependencies
+click = {version = "^8.2.1", optional = true}
+crewai = {version = ">=0.41.0", optional = true}
+langchain = {version = ">=0.1.0", optional = true}
+langchain-anthropic = {version = "^0.3.19", optional = true}
+langchain-ollama = {version = "^0.3.7", optional = true}
+langchain-openai = {version = ">=0.1.0", optional = true}
+langgraph = {version = ">=0.1.0", optional = true}
+llama-index = {version = ">=0.9.0", optional = true}
+llama-index-cli = {version = "^0.5.0", optional = true}
+llama-index-llms-anthropic = {version = "^0.8.5", optional = true}
+llama-index-llms-ollama = {version = "^0.7.1", optional = true}
+matplotlib = {version = ">=3.7.0", optional = true}
+memory-profiler = {version = ">=0.61.0", optional = true}
+numpy = {version = ">=1.24.0", optional = true}
+openai = {version = ">=1.30.0", optional = true}
+pandas = {version = ">=2.0.0", optional = true}
+# Benchmarking specific dependencies
+psutil = {version = ">=5.9.0", optional = true}
+pydantic-ai = {version = ">=0.0.5", optional = true}
 python = ">=3.10,<3.13"
-# Utility dependencies
 python-dotenv = ">=1.0.0"
 rich = ">=13.0.0"
+seaborn = {version = ">=0.12.0", optional = true}
+tabulate = {version = ">=0.9.0", optional = true}
 typer = ">=0.9.0"
 
-[tool.poetry.group.benchmarks.dependencies]
-matplotlib = ">=3.7.0"
-memory-profiler = ">=0.61.0"
-numpy = ">=1.24.0"
-pandas = ">=2.0.0"
-# Benchmarking specific dependencies
-psutil = ">=5.9.0"
-seaborn = ">=0.12.0"
-tabulate = ">=0.9.0"
+# Optional dependency groups for pip install
+[tool.poetry.extras]
+benchmark = [
+  "click",
+  "matplotlib",
+  "numpy",
+  "pandas",
+  "psutil",
+  "seaborn",
+  "tabulate",
+  "memory-profiler",
+  "anthropic",
+  "openai",
+  "langchain",
+  "langchain-openai",
+  "langchain-anthropic",
+  "langchain-ollama",
+  "langgraph",
+  "llama-index",
+  "llama-index-llms-anthropic",
+  "llama-index-cli",
+  "crewai",
+  "pydantic-ai"
+]
+full = [
+  "anthropic",
+  "openai",
+  "langchain",
+  "langchain-openai",
+  "langgraph",
+  "llama-index",
+  "crewai",
+  "pydantic-ai",
+  "click",
+  "matplotlib",
+  "numpy",
+  "pandas",
+  "psutil",
+  "seaborn",
+  "tabulate",
+  "memory-profiler"
+]
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.7.0"
@@ -126,14 +172,12 @@ detect-secrets = "^1.4.0"
 flake8 = "^6.0.0"
 flake8-bugbear = "^23.0.0"
 flake8-comprehensions = "^3.14.0"
-# Additional flake8 plugins
 flake8-docstrings = "^1.7.0"
 flake8-simplify = "^0.20.0"
 isort = "^5.12.0"
+maturin = "^1.8.6"
 mypy = "^1.0.0"
-# Pre-commit
 pre-commit = "^3.6.0"
-# Development dependencies
 pytest = ">=7.0.0"
 pytest-asyncio = ">=0.21.0"
 pytest-cov = ">=4.0.0"
