--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,9 +94,16 @@ version = "0.1.0"
 aiofiles = ">=23.0.0"
 # Optional AI/ML dependencies
 anthropic = {version = ">=0.24.0", optional = true}
+# Vector database dependencies
+astrapy = {version = ">=1.0.0", optional = true}
+boto3 = {version = ">=1.26.0", optional = true}
 # Optional benchmarking dependencies
+chromadb = {version = ">=0.4.0", optional = true}
 click = {version = "^8.2.1", optional = true}
 crewai = {version = ">=0.41.0", optional = true}
+elasticsearch = {version = ">=8.0.0", optional = true}
+faiss-cpu = {version = ">=1.7.0", optional = true}
+ibm-db = {version = ">=3.1.0", optional = true}
 langchain = {version = ">=0.1.0", optional = true}
 langchain-anthropic = {version = "^0.3.19", optional = true}
 langchain-ollama = {version = "^0.3.7", optional = true}
@@ -106,23 +113,32 @@ llama-index = {version = ">=0.9.0", optional = true}
 llama-index-cli = {version = "^0.5.0", optional = true}
 llama-index-llms-anthropic = {version = "^0.8.5", optional = true}
 llama-index-llms-ollama = {version = "^0.7.1", optional = true}
+mariadb = {version = ">=1.1.0", optional = true}
 matplotlib = {version = ">=3.7.0", optional = true}
 memory-profiler = {version = ">=0.61.0", optional = true}
 numpy = {version = ">=1.24.0", optional = true}
 openai = {version = ">=1.30.0", optional = true}
 pandas = {version = ">=2.0.0", optional = true}
+pinecone = {version = ">=4.0.0", optional = true}
 # Benchmarking specific dependencies
 psutil = {version = ">=5.9.0", optional = true}
+psycopg2 = {version = ">=2.9.0", optional = true}
 pydantic-ai = {version = ">=0.0.5", optional = true}
+pymilvus = {version = ">=2.3.0", optional = true}
+pymongo = {version = ">=4.0.0", optional = true}
 python = ">=3.10,<3.13"
 python-dotenv = ">=1.0.0"
+qdrant-client = {version = ">=1.7.0", optional = true}
+requests = {version = ">=2.28.0", optional = true}
 rich = ">=13.0.0"
 seaborn = {version = ">=0.12.0", optional = true}
 tabulate = {version = ">=0.9.0", optional = true}
 typer = ">=0.9.0"
+weaviate-client = {version = ">=4.4.0", optional = true}
 
 # Optional dependency groups for pip install
 [tool.poetry.extras]
+astradb = ["astrapy"]
 benchmark = [
   "click",
   "matplotlib",
@@ -145,6 +161,11 @@ benchmark = [
   "crewai",
   "pydantic-ai"
 ]
+boto3 = ["boto3"]
+chromadb = ["chromadb"]
+db2 = ["ibm-db", "numpy"]
+elasticsearch = ["elasticsearch"]
+faiss = ["faiss-cpu", "numpy"]
 full = [
   "click",
   "matplotlib",
@@ -165,8 +186,29 @@ full = [
   "llama-index-llms-anthropic",
   "llama-index-cli",
   "crewai",
-  "pydantic-ai"
+  "pydantic-ai",
+  "astrapy",
+  "boto3",
+  "chromadb",
+  "elasticsearch",
+  "faiss-cpu",
+  "ibm-db",
+  "mariadb",
+  "pinecone",
+  "psycopg2",
+  "pymilvus",
+  "pymongo",
+  "qdrant-client",
+  "requests",
+  "weaviate-client"
 ]
+mariadb = ["mariadb", "numpy"]
+milvus = ["pymilvus"]
+mongodb = ["pymongo"]
+pgvector = ["psycopg2"]
+pinecone = ["pinecone"]
+qdrant = ["qdrant-client"]
+weaviate = ["weaviate-client"]
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.7.0"
