--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,9 +109,13 @@ click = "^8.2.1"
 crewai = ">=0.41.0"
 # Core AI/ML dependencies
 langchain = ">=0.1.0"
+langchain-anthropic = "^0.3.19"
+langchain-ollama = "^0.3.7"
 langchain-openai = ">=0.1.0"
 langgraph = ">=0.1.0"
 llama-index = ">=0.9.0"
+llama-index-llms-anthropic = "^0.8.5"
+llama-index-llms-ollama = "^0.7.1"
 maturin = "^1.8.6"
 openai = ">=1.30.0"
 pydantic-ai = ">=0.0.5"
@@ -151,6 +155,7 @@ pytest = ">=7.0.0"
 pytest-asyncio = ">=0.21.0"
 pytest-cov = ">=4.0.0"
 safety = "^2.3.0"
+types-pyyaml = "^6.0.12.20250822"
 
 [tool.pytest.ini_options]
 addopts = "-ra -q --strict-markers --strict-config"
