--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,6 +122,7 @@ pydantic-ai = ">=0.0.5"
 python = ">=3.10,<3.13"
 # Utility dependencies
 python-dotenv = ">=1.0.0"
+requests = ">=2.25.0"
 rich = ">=13.0.0"
 typer = ">=0.9.0"
 
