--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,7 +115,7 @@ jobs:
   test-matrix:
     name: Test Suite
     needs: validation
-    if: always()
+    if: needs.validation.result == 'success'
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -197,12 +197,13 @@ jobs:
           coverage.xml
           htmlcov/
           .coverage
+        if-no-files-found: ignore
         retention-days: 7
 
   build:
     name: Build Artifacts
     needs: validation
-    if: always()
+    if: needs.validation.result == 'success'
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -369,6 +370,7 @@ jobs:
           dist/
           target/release/libgraphbit*
           target/${{ matrix.target }}/release/libgraphbit*
+        if-no-files-found: ignore
         retention-days: 30
 
     - name: Upload platform packages
@@ -378,12 +380,13 @@ jobs:
         name: packages-${{ matrix.platform }}-${{ matrix.arch }}
         path: |
           dist/${{ matrix.platform }}/
+        if-no-files-found: ignore
         retention-days: 30
 
   macos-universal:
     name: Build Mac Universal Package
     needs: [validation, build]
-    if: always() && github.ref == 'refs/heads/workflow/ci'
+    if: needs.build.result == 'success' && github.ref == 'refs/heads/workflow/ci'
     runs-on: macos-latest
 
     steps:
@@ -391,21 +394,18 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Download Mac x64 artifacts
-      if: needs.build.result == 'success'
       uses: actions/download-artifact@v4
       with:
         name: build-artifacts-macos-x64-x64
         path: ./macos-x64
 
     - name: Download Mac ARM64 artifacts
-      if: needs.build.result == 'success'
       uses: actions/download-artifact@v4
       with:
         name: build-artifacts-macos-arm64-arm64
         path: ./macos-arm64
 
     - name: Create Mac Universal package
-      if: needs.build.result == 'success'
       run: |
         echo "Creating Mac Universal package..."
         mkdir -p dist/macos-universal
@@ -429,11 +429,11 @@ jobs:
         cp -r ./macos-arm64/dist/* ./dist/macos-universal/ 2>/dev/null || true
 
     - name: Upload Mac Universal package
-      if: needs.build.result == 'success'
       uses: actions/upload-artifact@v4
       with:
         name: packages-macos-universal
         path: dist/macos-universal/
+        if-no-files-found: ignore
         retention-days: 90
 
   ci-summary:
