--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ tokio.workspace = true
 [dev-dependencies]
 pyo3 = {workspace = true, features = ["auto-initialize"]}
 async-trait.workspace = true
+wiremock = "0.6"
+mockito = "1.4"
 
 [features]
 default = []
