feat(document_loader): enhance CSV/XML/HTML parsing with structured output
Add comprehensive parsing capabilities for CSV, XML, and HTML documents in the document loader. The new implementation:
- Converts CSV files to structured text with headers and row data
- Extracts XML elements, attributes and text content in readable format
- Parses HTML documents to extract titles, headings, paragraphs, lists and tables
- Includes fallback to raw content when parsing fails
- Adds extensive test coverage for various document formats and edge cases

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,6 +87,11 @@ resolver = "2"
 anyhow = "1.0"
 async-trait = "0.1.88"
 chrono = {version = "0.4", features = ["serde"]}
+# CSV and XML parsing
+csv = "1.3"
+quick-xml = {version = "0.36", features = ["serialize"]}
+# HTML parsing
+scraper = "0.20"
 # Document processing
 docx-rs = "0.4"
 futures = "0.3"
