--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -6,6 +6,7 @@ futures.workspace = true
 num_cpus.workspace = true
 pyo3.workspace = true
 pyo3-async-runtimes.workspace = true
+pythonize.workspace = true
 reqwest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
