--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,6 +105,7 @@ petgraph = "0.6"
 # Python bindings
 pyo3 = {version = "0.24.1", features = ["extension-module"]}
 pyo3-async-runtimes = {version = "0.24", features = ["tokio-runtime"]}
+pythonize = "0.24"
 quick-xml = {version = "0.36", features = ["serialize"]}
 rand = "0.8"
 regex = "1.10"
