--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,101 @@
 build-backend = "maturin"
 requires = ["maturin>=1.0,<2.0"]
 
+[project]
+name = "graphbit"
+version = "0.4.0"
+description = "GraphBit - Advanced workflow automation and AI agent orchestration library"
+readme = "README.md"
+license = {file = "LICENSE.md"}
+authors = [
+    {name = "GraphBit Team", email = "team@graphbit.ai"}
+]
+maintainers = [
+    {name = "GraphBit Team", email = "team@graphbit.ai"}
+]
+keywords = ["ai", "agents", "workflow", "automation", "rust", "python", "llm", "orchestration"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: InfinitiBit Approved :: Custom License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Rust",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: System :: Distributed Computing",
+    "Typing :: Typed"
+]
+requires-python = ">=3.10"
+dependencies = [
+    "aiofiles>=23.0.0",
+    "aiohttp>=3.12.15",
+    "python-dotenv>=1.0.0",
+    "rich>=13.0.0",
+    "typer>=0.9.0"
+]
+
+[project.optional-dependencies]
+ai = [
+    "anthropic>=0.24.0",
+    "openai>=1.30.0"
+]
+vector-db = [
+    "astrapy>=1.0.0",
+    "chromadb>=0.4.0",
+    "elasticsearch>=8.0.0",
+    "faiss-cpu>=1.7.0",
+    "pinecone>=4.0.0",
+    "pymilvus>=2.3.0",
+    "qdrant-client>=1.7.0",
+    "weaviate-client>=4.4.0"
+]
+databases = [
+    "boto3>=1.26.0",
+    "ibm-db>=3.1.0",
+    "mariadb>=1.1.0",
+    "psycopg2>=2.9.0",
+    "pymongo>=4.0.0"
+]
+benchmark = [
+    "click>=8.2.1",
+    "matplotlib>=3.7.0",
+    "numpy>=1.24.0",
+    "pandas>=2.0.0",
+    "psutil>=5.9.0",
+    "seaborn>=0.12.0",
+    "tabulate>=0.9.0",
+    "memory-profiler>=0.61.0",
+    "crewai>=0.41.0",
+    "langchain>=0.1.0",
+    "langchain-anthropic>=0.3.19",
+    "langchain-ollama>=0.3.7",
+    "langchain-openai>=0.1.0",
+    "langgraph>=0.1.0",
+    "llama-index>=0.9.0",
+    "llama-index-cli>=0.5.0",
+    "llama-index-llms-anthropic>=0.8.5",
+    "llama-index-llms-ollama>=0.7.1",
+    "pydantic-ai>=0.0.5"
+]
+full = [
+    "graphbit[ai,vector-db,databases,benchmark]",
+    "requests>=2.25.0",
+    "types-pyyaml>=6.0.12.20250822"
+]
+
+[project.urls]
+Homepage = "https://github.com/InfinitiBit/graphbit"
+Documentation = "https://docs.graphbit.ai"
+Repository = "https://github.com/InfinitiBit/graphbit"
+"Bug Tracker" = "https://github.com/InfinitiBit/graphbit/issues"
+Changelog = "https://github.com/InfinitiBit/graphbit/blob/main/CHANGELOG.md"
+Discord = "https://discord.com/invite/huVJwkyu"
+
 [tool.bandit]
 exclude_dirs = ["tests", "test"]
 skips = ["B101", "B601"]
@@ -66,15 +161,19 @@ use_parentheses = true
 # PyO3 bindings configuration
 bindings = "pyo3"
 # Compatibility settings for PyPI distribution
-compatibility = "pypi"
+compatibility = "linux"
 # Module configuration
 module-name = "graphbit"
 # Build profile for optimized releases
 profile = "release"
-# Skip auditwheel for root builds (problematic configuration)
-skip-auditwheel = true
+# Enable auditwheel for proper PyPI compatibility
+skip-auditwheel = false
 # Build optimizations
 strip = true
+# Python interpreter finding
+python-source = "auto"
+# Manifest path for the Rust project
+manifest-path = "python/Cargo.toml"
 
 [tool.mypy]
 check_untyped_defs = true
