--- a/Cargo.toml
+++ b/Cargo.toml
@@ -176,7 +176,7 @@ documentation = "https://docs.graphbit.ai"
 edition = "2021"
 homepage = "https://graphbit.ai"
 keywords = ["ai", "automation", "workflow", "agent", "llm"]
-license-file = "LICENSE"
+license-file = "LICENSE.md"
 repository = "https://github.com/InfinitiBit/graphbit"
 rust-version = "1.70.0"
 version = "0.4.0"
