fix: update license-file entry in Cargo.toml to specify LICENSE.md

--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -42,7 +42,7 @@ documentation.workspace = true
 edition.workspace = true
 homepage.workspace = true
 keywords.workspace = true
-license-file.workspace = true
+license-file = "LICENSE.md"
 repository.workspace = true
 rust-version.workspace = true
 version.workspace = true
