--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,6 +8,7 @@ docx-rs.workspace = true
 futures.workspace = true
 lazy_static.workspace = true
 lopdf.workspace = true
+pdf-extract.workspace = true
 petgraph.workspace = true
 quick-xml.workspace = true
 rand.workspace = true
