--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -18,15 +18,15 @@ MD009:
   br_spaces: 2
 
 MD013:
-  # Line length - disable for code blocks and tables
-  line_length: 100
+  # Line length - allow up to 150, but disable for code blocks and tables
+  line_length: 150
   code_blocks: false
   tables: false
   headings: false
 
-MD024:
-  # Multiple headers with the same content - allow duplicates in different sections
-  allow_different_nesting: true
+MD024: false
+  # # Multiple headers with the same content - allow duplicates in different sections
+  # allow_different_nesting: true
 
 MD026:
   # Trailing punctuation in headers - allow question marks
@@ -38,13 +38,24 @@ MD029:
 
 MD033:
   # Inline HTML - allow for necessary HTML elements
-  allowed_elements: [br, sub, sup, img, a, details, summary]
+  # allowed_elements: [br, sub, sup, img, a, details, summary, div, p, h1]
+  allowed_elements:
+    - br
+    - sub
+    - sup
+    - img
+    - a
+    - details
+    - summary
+    - div
+    - p
+    - h1
+    - b
+
 
 MD034: false
 
 MD036: false
-
-MD041: false
 
 MD046:
   # Code block style - fenced code blocks
